test_scripts/errors/dict_missing_key.stderr
 1 | let d = {:}
 2 | d["missing"]
     ^^^^^^^^^^^^
Error: Key missing not in dict
